--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1506,6 +1506,7 @@
 37.78.241.78 xmlrpc;
 37.78.251.70 xmlrpc;
 37.79.141.169 xmlrpc;
+37.79.142.239 xmlrpc;
 37.79.142.251 xmlrpc;
 37.79.43.247 xmlrpc;
 37.79.8.195 xmlrpc;
