--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1958,6 +1958,7 @@
 79.126.114.157 xmlrpc;
 79.133.132.90 xmlrpc;
 79.139.131.9 xmlrpc;
+79.139.140.4 xmlrpc;
 79.139.151.25 xmlrpc;
 79.139.246.86 xmlrpc;
 79.141.208.34 xmlrpc;
