--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -157,6 +157,7 @@
 111.229.97.33 xmlrpc;
 111.230.235.167 xmlrpc;
 111.59.4.88 xmlrpc;
+111.77.146.86 xmlrpc;
 112.124.10.116 xmlrpc;
 112.124.64.110 xmlrpc;
 112.126.82.77 xmlrpc;
