--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2283,6 +2283,7 @@
 94.140.246.3 xmlrpc;
 94.140.246.55 xmlrpc;
 94.141.124.198 xmlrpc;
+94.141.125.234 xmlrpc;
 94.158.190.83 xmlrpc;
 94.181.82.100 xmlrpc;
 94.19.164.97 xmlrpc;
