--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1652,6 +1652,7 @@
 45.89.100.114 xmlrpc;
 45.92.124.60 xmlrpc;
 46.0.137.179 xmlrpc;
+46.138.179.3 xmlrpc;
 46.138.188.134 xmlrpc;
 46.138.72.172 xmlrpc;
 46.138.72.231 xmlrpc;
