--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -928,6 +928,7 @@
 185.244.23.48 xmlrpc;
 185.244.5.248 xmlrpc;
 185.246.194.111 xmlrpc;
+185.248.27.123 xmlrpc;
 185.250.149.64 xmlrpc;
 185.252.249.19 xmlrpc;
 185.253.102.77 xmlrpc;
@@ -2384,6 +2385,7 @@
 95.24.70.57 xmlrpc;
 95.24.82.233 xmlrpc;
 95.25.23.3 xmlrpc;
+95.25.248.33 xmlrpc;
 95.25.49.251 xmlrpc;
 95.25.57.184 xmlrpc;
 95.25.61.116 xmlrpc;
