--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1882,6 +1882,7 @@
 5.42.213.178 xmlrpc;
 5.42.64.62 xmlrpc;
 5.42.66.6 xmlrpc;
+5.45.80.13 xmlrpc;
 5.59.135.126 xmlrpc;
 5.59.135.38 xmlrpc;
 5.59.222.41 xmlrpc;
