Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -647,6 +647,7 @@
 176.104.192.242 xmlrpc;
 176.106.151.121 xmlrpc;
 176.106.156.223 xmlrpc;
+176.106.157.66 xmlrpc;
 176.110.129.92 xmlrpc;
 176.112.106.51 xmlrpc;
 176.112.233.186 xmlrpc;
@@ -1454,6 +1455,7 @@
 31.41.62.75 xmlrpc;
 31.42.46.4 xmlrpc;
 31.43.223.161 xmlrpc;
+31.6.114.191 xmlrpc;
 34.126.127.235 xmlrpc;
 34.142.151.15 xmlrpc;
 34.142.214.245 xmlrpc;
