Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1035,6 +1035,7 @@
 188.232.8.156 xmlrpc;
 188.234.13.9 xmlrpc;
 188.235.171.178 xmlrpc;
+188.242.108.134 xmlrpc;
 188.243.162.38 xmlrpc;
 188.243.202.140 xmlrpc;
 188.246.233.180 xmlrpc;
@@ -1051,6 +1052,7 @@
 188.65.17.89 xmlrpc;
 188.65.18.151 xmlrpc;
 188.65.18.176 xmlrpc;
+188.65.18.213 xmlrpc;
 188.65.18.86 xmlrpc;
 188.92.195.2 xmlrpc;
 192.109.243.217 xmlrpc;
@@ -1933,6 +1935,7 @@
 77.232.21.4 xmlrpc;
 77.238.134.163 xmlrpc;
 77.35.157.73 xmlrpc;
+77.37.161.73 xmlrpc;
 77.37.240.207 xmlrpc;
 77.40.2.201 xmlrpc;
 77.40.3.234 xmlrpc;
