--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1280,6 +1280,7 @@
 213.180.203.80 xmlrpc;
 213.180.203.86 xmlrpc;
 213.180.203.93 xmlrpc;
+213.222.226.64 xmlrpc;
 213.232.235.83 xmlrpc;
 213.234.9.82 xmlrpc;
 213.24.125.184 xmlrpc;
