--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -251,6 +251,7 @@
 119.84.146.67 xmlrpc;
 119.84.148.48 xmlrpc;
 119.91.145.189 xmlrpc;
+119.91.199.228 xmlrpc;
 119.91.220.220 xmlrpc;
 119.91.252.123 xmlrpc;
 120.234.203.171 xmlrpc;
