--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -905,6 +905,7 @@
 185.225.33.46 xmlrpc;
 185.227.134.106 xmlrpc;
 185.228.135.113 xmlrpc;
+185.228.135.226 xmlrpc;
 185.23.66.73 xmlrpc;
 185.23.66.89 xmlrpc;
 185.234.230.85 xmlrpc;
