Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1909,6 +1909,7 @@
 78.106.143.17 xmlrpc;
 78.106.181.5 xmlrpc;
 78.139.210.26 xmlrpc;
+78.142.235.4 xmlrpc;
 78.156.235.199 xmlrpc;
 78.24.216.250 xmlrpc;
 78.29.15.56 xmlrpc;
