Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2286,6 +2286,7 @@
 95.110.74.58 xmlrpc;
 95.152.62.146 xmlrpc;
 95.152.63.18 xmlrpc;
+95.159.176.69 xmlrpc;
 95.161.140.4 xmlrpc;
 95.165.106.81 xmlrpc;
 95.165.46.74 xmlrpc;
