--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -954,6 +954,7 @@
 185.59.246.172 xmlrpc;
 185.61.218.17 xmlrpc;
 185.61.219.176 xmlrpc;
+185.61.221.85 xmlrpc;
 185.61.222.253 xmlrpc;
 185.61.76.194 xmlrpc;
 185.72.224.95 xmlrpc;
