--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -165,6 +165,7 @@
 113.108.220.146 xmlrpc;
 113.119.64.51 xmlrpc;
 113.119.66.50 xmlrpc;
+113.119.66.94 xmlrpc;
 113.88.199.245 xmlrpc;
 114.116.25.182 xmlrpc;
 114.119.128.126 xmlrpc;
