--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1071,6 +1071,7 @@
 193.46.77.189 xmlrpc;
 193.93.193.200 xmlrpc;
 193.93.194.176 xmlrpc;
+193.93.194.39 xmlrpc;
 194.15.115.212 xmlrpc;
 194.190.1.194 xmlrpc;
 194.195.90.110 xmlrpc;
@@ -1307,6 +1308,7 @@
 223.95.50.169 xmlrpc;
 23.101.10.141 xmlrpc;
 23.111.202.231 xmlrpc;
+2400:6180:0:d0::e73:9001 xmlrpc;
 2400:8901::f03c:91ff:fefd:d635 xmlrpc;
 2400:8901::f03c:92ff:fe19:5a3 xmlrpc;
 2400:8901::f03c:92ff:fe35:dad1 xmlrpc;
