Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1997,6 +1997,7 @@
 82.157.174.41 xmlrpc;
 82.157.239.139 xmlrpc;
 82.157.52.7 xmlrpc;
+82.194.247.214 xmlrpc;
 82.208.107.107 xmlrpc;
 82.209.105.229 xmlrpc;
 83.139.147.12 xmlrpc;
@@ -2205,6 +2206,7 @@
 94.141.124.198 xmlrpc;
 94.141.125.234 xmlrpc;
 94.158.190.83 xmlrpc;
+94.181.160.57 xmlrpc;
 94.181.82.100 xmlrpc;
 94.19.164.97 xmlrpc;
 94.19.187.175 xmlrpc;
