Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -689,6 +689,7 @@
 176.74.202.15 xmlrpc;
 176.96.255.239 xmlrpc;
 176.98.158.235 xmlrpc;
+176.99.203.178 xmlrpc;
 176.99.235.7 xmlrpc;
 176.99.84.175 xmlrpc;
 176.99.86.125 xmlrpc;
@@ -2303,6 +2304,7 @@
 95.24.69.152 xmlrpc;
 95.24.70.57 xmlrpc;
 95.24.82.233 xmlrpc;
+95.25.198.3 xmlrpc;
 95.25.23.3 xmlrpc;
 95.25.248.33 xmlrpc;
 95.25.57.184 xmlrpc;
