--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1523,6 +1523,7 @@
 43.136.14.165 xmlrpc;
 43.136.17.87 xmlrpc;
 43.136.19.9 xmlrpc;
+43.136.34.43 xmlrpc;
 43.136.54.236 xmlrpc;
 43.136.56.218 xmlrpc;
 43.136.58.184 xmlrpc;
