Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -596,6 +596,7 @@
 165.84.162.121 xmlrpc;
 167.172.70.183 xmlrpc;
 167.172.88.14 xmlrpc;
+167.172.93.26 xmlrpc;
 167.172.95.136 xmlrpc;
 167.71.208.161 xmlrpc;
 168.63.148.152 xmlrpc;
