Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1253,6 +1253,7 @@
 213.180.203.80 xmlrpc;
 213.180.203.86 xmlrpc;
 213.180.203.93 xmlrpc;
+213.193.10.78 xmlrpc;
 213.222.226.64 xmlrpc;
 213.232.235.83 xmlrpc;
 213.234.9.82 xmlrpc;
@@ -2278,6 +2279,7 @@
 95.220.94.205 xmlrpc;
 95.221.225.151 xmlrpc;
 95.24.108.39 xmlrpc;
+95.24.111.151 xmlrpc;
 95.24.116.194 xmlrpc;
 95.24.119.216 xmlrpc;
 95.24.14.88 xmlrpc;
