--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -521,6 +521,7 @@
 148.72.232.95 xmlrpc;
 148.72.232.96 xmlrpc;
 148.72.245.234 xmlrpc;
+149.255.113.34 xmlrpc;
 149.50.213.157 xmlrpc;
 149.62.52.77 xmlrpc;
 15.235.140.141 xmlrpc;
@@ -1770,6 +1771,7 @@
 5.165.255.166 xmlrpc;
 5.165.43.124 xmlrpc;
 5.165.44.154 xmlrpc;
+5.165.50.251 xmlrpc;
 5.166.204.249 xmlrpc;
 5.166.72.32 xmlrpc;
 5.167.144.234 xmlrpc;
@@ -2303,6 +2305,7 @@
 95.24.57.95 xmlrpc;
 95.24.69.152 xmlrpc;
 95.24.70.57 xmlrpc;
+95.24.77.253 xmlrpc;
 95.24.82.233 xmlrpc;
 95.25.198.3 xmlrpc;
 95.25.23.3 xmlrpc;
