--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -686,6 +686,7 @@
 176.59.4.173 xmlrpc;
 176.67.55.31 xmlrpc;
 176.74.202.15 xmlrpc;
+176.77.108.83 xmlrpc;
 176.96.255.239 xmlrpc;
 176.98.158.235 xmlrpc;
 176.99.203.178 xmlrpc;
