Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -305,6 +305,7 @@
 123.13.60.91 xmlrpc;
 123.13.60.93 xmlrpc;
 123.13.61.156 xmlrpc;
+123.13.62.160 xmlrpc;
 123.13.62.230 xmlrpc;
 123.13.62.39 xmlrpc;
 123.13.62.84 xmlrpc;
