--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -64,6 +64,7 @@
 104.28.156.217 xmlrpc;
 104.28.156.218 xmlrpc;
 104.28.156.219 xmlrpc;
+104.28.156.224 xmlrpc;
 104.28.157.195 xmlrpc;
 104.28.157.196 xmlrpc;
 104.28.157.197 xmlrpc;
