--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -304,6 +304,7 @@
 123.13.59.96 xmlrpc;
 123.13.60.151 xmlrpc;
 123.13.60.173 xmlrpc;
+123.13.60.86 xmlrpc;
 123.13.60.91 xmlrpc;
 123.13.60.93 xmlrpc;
 123.13.60.95 xmlrpc;
