--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -276,6 +276,7 @@
 121.41.131.15 xmlrpc;
 121.41.193.253 xmlrpc;
 121.5.116.8 xmlrpc;
+121.6.48.182 xmlrpc;
 121.6.90.224 xmlrpc;
 121.89.199.4 xmlrpc;
 121.89.247.76 xmlrpc;
@@ -300,6 +301,7 @@
 123.13.58.50 xmlrpc;
 123.13.58.93 xmlrpc;
 123.13.59.172 xmlrpc;
+123.13.59.241 xmlrpc;
 123.13.59.96 xmlrpc;
 123.13.60.151 xmlrpc;
 123.13.60.173 xmlrpc;
