--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -315,6 +315,7 @@
 123.13.62.39 xmlrpc;
 123.13.62.84 xmlrpc;
 123.13.63.142 xmlrpc;
+123.13.63.168 xmlrpc;
 123.13.63.207 xmlrpc;
 123.13.63.208 xmlrpc;
 123.13.63.211 xmlrpc;
