--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -294,6 +294,7 @@
 123.13.57.21 xmlrpc;
 123.13.57.59 xmlrpc;
 123.13.58.129 xmlrpc;
+123.13.58.178 xmlrpc;
 123.13.58.200 xmlrpc;
 123.13.58.206 xmlrpc;
 123.13.58.23 xmlrpc;
@@ -310,6 +311,7 @@
 123.13.60.93 xmlrpc;
 123.13.60.95 xmlrpc;
 123.13.61.156 xmlrpc;
+123.13.61.231 xmlrpc;
 123.13.62.160 xmlrpc;
 123.13.62.230 xmlrpc;
 123.13.62.39 xmlrpc;
