Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -313,11 +313,13 @@
 123.13.60.95 xmlrpc;
 123.13.61.156 xmlrpc;
 123.13.61.231 xmlrpc;
+123.13.61.66 xmlrpc;
 123.13.62.160 xmlrpc;
 123.13.62.230 xmlrpc;
 123.13.62.39 xmlrpc;
 123.13.62.84 xmlrpc;
 123.13.63.142 xmlrpc;
+123.13.63.153 xmlrpc;
 123.13.63.168 xmlrpc;
 123.13.63.207 xmlrpc;
 123.13.63.208 xmlrpc;
