--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -287,6 +287,7 @@
 123.114.16.94 xmlrpc;
 123.13.56.111 xmlrpc;
 123.13.56.119 xmlrpc;
+123.13.56.176 xmlrpc;
 123.13.56.192 xmlrpc;
 123.13.57.136 xmlrpc;
 123.13.57.21 xmlrpc;
