--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -290,6 +290,7 @@
 123.13.56.176 xmlrpc;
 123.13.56.192 xmlrpc;
 123.13.57.136 xmlrpc;
+123.13.57.197 xmlrpc;
 123.13.57.21 xmlrpc;
 123.13.57.59 xmlrpc;
 123.13.58.178 xmlrpc;
