--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1370,6 +1370,7 @@
 2a03:6f00:6:1::b972:f7e8 xmlrpc;
 2a03:6f00:6:1::bce1:17aa xmlrpc;
 2a03:6f00:6:1::bce1:288c xmlrpc;
+2a03:6f01:1:2::320c xmlrpc;
 3.0.138.73 xmlrpc;
 31.12.92.159 xmlrpc;
 31.12.92.18 xmlrpc;
