--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -328,6 +328,7 @@
 123.13.63.214 xmlrpc;
 123.13.63.37 xmlrpc;
 123.13.63.72 xmlrpc;
+123.202.140.179 xmlrpc;
 123.207.11.95 xmlrpc;
 123.207.43.157 xmlrpc;
 123.207.46.236 xmlrpc;
