--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2242,6 +2242,7 @@
 95.107.18.52 xmlrpc;
 95.108.213.119 xmlrpc;
 95.108.213.126 xmlrpc;
+95.108.213.128 xmlrpc;
 95.108.213.129 xmlrpc;
 95.108.213.130 xmlrpc;
 95.108.213.143 xmlrpc;
