--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2161,6 +2161,7 @@
 92.223.86.12 xmlrpc;
 92.223.86.16 xmlrpc;
 92.223.86.22 xmlrpc;
+92.223.86.9 xmlrpc;
 92.252.143.106 xmlrpc;
 92.253.252.55 xmlrpc;
 92.255.134.182 xmlrpc;
