--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1287,6 +1287,7 @@
 217.23.67.62 xmlrpc;
 217.26.21.199 xmlrpc;
 217.66.157.235 xmlrpc;
+218.16.68.214 xmlrpc;
 218.186.143.62 xmlrpc;
 218.189.40.114 xmlrpc;
 218.57.210.186 xmlrpc;
