Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -476,6 +476,7 @@
 146.158.112.198 xmlrpc;
 146.158.122.20 xmlrpc;
 146.158.122.25 xmlrpc;
+146.158.124.52 xmlrpc;
 146.158.124.54 xmlrpc;
 146.158.124.61 xmlrpc;
 146.158.125.107 xmlrpc;
@@ -769,6 +770,7 @@
 178.57.124.4 xmlrpc;
 178.66.28.65 xmlrpc;
 178.67.192.28 xmlrpc;
+178.67.249.130 xmlrpc;
 178.68.51.136 xmlrpc;
 178.71.94.219 xmlrpc;
 18.141.48.244 xmlrpc;
@@ -1767,6 +1769,7 @@
 5.142.152.106 xmlrpc;
 5.144.119.92 xmlrpc;
 5.145.254.43 xmlrpc;
+5.149.156.184 xmlrpc;
 5.153.189.247 xmlrpc;
 5.157.32.20 xmlrpc;
 5.157.32.48 xmlrpc;
@@ -2239,6 +2242,7 @@
 94.51.236.9 xmlrpc;
 95.104.160.68 xmlrpc;
 95.104.244.148 xmlrpc;
+95.106.134.10 xmlrpc;
 95.106.201.164 xmlrpc;
 95.106.241.50 xmlrpc;
 95.106.69.232 xmlrpc;
