Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -970,6 +970,7 @@
 185.8.126.198 xmlrpc;
 185.82.177.99 xmlrpc;
 185.9.78.51 xmlrpc;
+188.0.169.118 xmlrpc;
 188.0.169.176 xmlrpc;
 188.0.169.7 xmlrpc;
 188.0.189.219 xmlrpc;
@@ -1685,6 +1686,7 @@
 46.8.222.131 xmlrpc;
 46.8.223.80 xmlrpc;
 46.8.23.244 xmlrpc;
+46.8.245.134 xmlrpc;
 46.8.38.24 xmlrpc;
 46.8.63.121 xmlrpc;
 46.8.93.37 xmlrpc;
