Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2310,6 +2310,7 @@
 95.24.230.81 xmlrpc;
 95.24.233.234 xmlrpc;
 95.24.3.105 xmlrpc;
+95.24.45.50 xmlrpc;
 95.24.46.89 xmlrpc;
 95.24.50.172 xmlrpc;
 95.24.57.95 xmlrpc;
