--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -738,6 +738,7 @@
 178.205.51.99 xmlrpc;
 178.205.54.196 xmlrpc;
 178.206.200.23 xmlrpc;
+178.207.134.167 xmlrpc;
 178.210.68.1 xmlrpc;
 178.212.250.76 xmlrpc;
 178.213.28.197 xmlrpc;
