--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2123,6 +2123,7 @@
 92.126.119.31 xmlrpc;
 92.223.85.226 xmlrpc;
 92.223.85.231 xmlrpc;
+92.223.85.250 xmlrpc;
 92.223.85.63 xmlrpc;
 92.223.85.66 xmlrpc;
 92.223.86.12 xmlrpc;
