--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2081,6 +2081,7 @@
 91.221.189.226 xmlrpc;
 91.221.29.177 xmlrpc;
 91.223.118.42 xmlrpc;
+91.223.118.49 xmlrpc;
 91.223.32.105 xmlrpc;
 91.224.140.142 xmlrpc;
 91.224.140.250 xmlrpc;
