--- a/nginx-config-files/git.conf
+++ b/nginx-config-files/git.conf
@@ -542,6 +542,7 @@
 2a0e:1bc1:129:10e6::1 git;
 3.110.68.163 git;
 3.124.123.190 git;
+3.137.71.185 git;
 3.138.101.15 git;
 3.14.73.195 git;
 3.144.85.206 git;
