--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -128,6 +128,7 @@
 109.68.210.233 xmlrpc;
 109.75.207.161 xmlrpc;
 109.94.11.4 xmlrpc;
+109.94.2.2 xmlrpc;
 109.95.101.24 xmlrpc;
 109.95.103.189 xmlrpc;
 110.40.135.44 xmlrpc;
