--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -425,6 +425,7 @@
 139.99.123.118 xmlrpc;
 139.99.29.123 xmlrpc;
 139.99.35.248 xmlrpc;
+139.99.4.107 xmlrpc;
 139.99.40.74 xmlrpc;
 139.99.69.92 xmlrpc;
 139.99.8.57 xmlrpc;
