--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -755,6 +755,7 @@
 178.67.192.28 xmlrpc;
 178.67.249.130 xmlrpc;
 178.68.51.136 xmlrpc;
+178.70.169.42 xmlrpc;
 178.71.94.219 xmlrpc;
 18.141.48.244 xmlrpc;
 180.138.194.161 xmlrpc;
@@ -2125,6 +2126,7 @@
 92.223.85.63 xmlrpc;
 92.223.85.66 xmlrpc;
 92.223.86.12 xmlrpc;
+92.223.86.15 xmlrpc;
 92.223.86.16 xmlrpc;
 92.223.86.22 xmlrpc;
 92.223.86.9 xmlrpc;
