--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1751,6 +1751,7 @@
 5.153.189.247 xmlrpc;
 5.157.32.20 xmlrpc;
 5.157.32.48 xmlrpc;
+5.157.33.218 xmlrpc;
 5.165.197.51 xmlrpc;
 5.165.200.36 xmlrpc;
 5.165.202.187 xmlrpc;
