--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2035,6 +2035,7 @@
 87.255.16.162 xmlrpc;
 88.135.80.28 xmlrpc;
 88.147.152.158 xmlrpc;
+88.147.173.210 xmlrpc;
 88.147.173.69 xmlrpc;
 88.147.174.134 xmlrpc;
 88.201.168.164 xmlrpc;
