--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1459,6 +1459,7 @@
 37.252.255.135 xmlrpc;
 37.29.24.222 xmlrpc;
 37.29.88.50 xmlrpc;
+37.78.153.234 xmlrpc;
 37.78.241.78 xmlrpc;
 37.78.251.70 xmlrpc;
 37.79.141.169 xmlrpc;
