--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2029,6 +2029,7 @@
 87.250.224.224 xmlrpc;
 87.250.224.237 xmlrpc;
 87.250.224.26 xmlrpc;
+87.250.224.4 xmlrpc;
 87.250.224.5 xmlrpc;
 87.250.224.7 xmlrpc;
 87.250.224.76 xmlrpc;
