--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -118,6 +118,7 @@
 109.248.15.194 xmlrpc;
 109.248.205.143 xmlrpc;
 109.248.252.154 xmlrpc;
+109.248.55.164 xmlrpc;
 109.252.11.72 xmlrpc;
 109.252.149.202 xmlrpc;
 109.252.2.88 xmlrpc;
