Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2024,6 +2024,7 @@
 87.250.224.222 xmlrpc;
 87.250.224.224 xmlrpc;
 87.250.224.237 xmlrpc;
+87.250.224.252 xmlrpc;
 87.250.224.26 xmlrpc;
 87.250.224.4 xmlrpc;
 87.250.224.5 xmlrpc;
