--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1999,6 +1999,7 @@
 85.26.234.3 xmlrpc;
 85.95.188.147 xmlrpc;
 85.95.189.123 xmlrpc;
+86.48.10.49 xmlrpc;
 87.117.48.186 xmlrpc;
 87.117.48.4 xmlrpc;
 87.117.51.234 xmlrpc;
