--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -571,6 +571,7 @@
 159.223.50.90 xmlrpc;
 159.223.55.95 xmlrpc;
 159.223.76.21 xmlrpc;
+159.223.93.241 xmlrpc;
 159.223.95.241 xmlrpc;
 159.65.0.78 xmlrpc;
 159.65.1.203 xmlrpc;
