--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -131,6 +131,7 @@
 109.94.2.2 xmlrpc;
 109.95.101.24 xmlrpc;
 109.95.103.189 xmlrpc;
+110.244.96.22 xmlrpc;
 110.40.135.44 xmlrpc;
 110.40.141.196 xmlrpc;
 110.40.224.247 xmlrpc;
