--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -131,6 +131,7 @@
 109.94.2.2 xmlrpc;
 109.95.101.24 xmlrpc;
 109.95.103.189 xmlrpc;
+109.95.79.119 xmlrpc;
 110.244.96.22 xmlrpc;
 110.40.135.44 xmlrpc;
 110.40.141.196 xmlrpc;
@@ -454,6 +455,7 @@
 143.198.211.20 xmlrpc;
 143.198.211.24 xmlrpc;
 143.198.211.52 xmlrpc;
+143.198.214.102 xmlrpc;
 143.198.94.86 xmlrpc;
 145.249.67.92 xmlrpc;
 145.255.8.115 xmlrpc;
