--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -125,6 +125,7 @@
 109.252.50.202 xmlrpc;
 109.252.63.243 xmlrpc;
 109.252.83.81 xmlrpc;
+109.61.170.160 xmlrpc;
 109.68.210.233 xmlrpc;
 109.75.207.161 xmlrpc;
 109.94.11.4 xmlrpc;
@@ -655,6 +656,7 @@
 176.122.59.203 xmlrpc;
 176.125.121.56 xmlrpc;
 176.14.168.157 xmlrpc;
+176.192.146.254 xmlrpc;
 176.195.226.62 xmlrpc;
 176.196.75.72 xmlrpc;
 176.208.15.69 xmlrpc;
@@ -1155,6 +1157,7 @@
 2001:1bb0:e000:1e::112 xmlrpc;
 202.14.4.134 xmlrpc;
 202.14.5.132 xmlrpc;
+202.57.209.14 xmlrpc;
 202.57.209.147 xmlrpc;
 202.57.209.168 xmlrpc;
 202.57.209.183 xmlrpc;
