Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -107,6 +107,7 @@
 109.169.141.218 xmlrpc;
 109.184.111.172 xmlrpc;
 109.187.87.192 xmlrpc;
+109.194.248.147 xmlrpc;
 109.229.246.63 xmlrpc;
 109.229.250.184 xmlrpc;
 109.229.78.194 xmlrpc;
@@ -1935,6 +1936,7 @@
 80.70.109.152 xmlrpc;
 80.72.30.54 xmlrpc;
 80.76.106.111 xmlrpc;
+80.76.106.112 xmlrpc;
 80.95.45.113 xmlrpc;
 80.95.45.13 xmlrpc;
 81.161.23.254 xmlrpc;
