--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1942,6 +1942,7 @@
 81.161.23.254 xmlrpc;
 81.163.129.11 xmlrpc;
 81.163.148.118 xmlrpc;
+81.177.126.74 xmlrpc;
 81.177.127.214 xmlrpc;
 81.177.135.132 xmlrpc;
 81.177.139.181 xmlrpc;
