--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -585,6 +585,7 @@
 159.75.112.51 xmlrpc;
 160.20.10.64 xmlrpc;
 160.20.11.189 xmlrpc;
+160.20.11.75 xmlrpc;
 162.14.71.142 xmlrpc;
 165.22.244.63 xmlrpc;
 165.22.249.78 xmlrpc;
