--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2051,6 +2051,7 @@
 89.113.26.208 xmlrpc;
 89.151.187.127 xmlrpc;
 89.151.187.86 xmlrpc;
+89.178.133.226 xmlrpc;
 89.178.46.194 xmlrpc;
 89.187.163.203 xmlrpc;
 89.187.163.213 xmlrpc;
