Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1944,6 +1944,7 @@
 80.72.30.54 xmlrpc;
 80.76.106.111 xmlrpc;
 80.76.106.112 xmlrpc;
+80.95.45.107 xmlrpc;
 80.95.45.113 xmlrpc;
 80.95.45.13 xmlrpc;
 81.161.23.254 xmlrpc;
@@ -2144,6 +2145,7 @@
 92.223.86.16 xmlrpc;
 92.223.86.9 xmlrpc;
 92.252.143.106 xmlrpc;
+92.252.182.66 xmlrpc;
 92.253.252.55 xmlrpc;
 92.255.134.182 xmlrpc;
 92.37.157.121 xmlrpc;
