--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1598,6 +1598,7 @@
 45.88.149.239 xmlrpc;
 45.89.100.114 xmlrpc;
 45.92.124.60 xmlrpc;
+45.95.67.177 xmlrpc;
 46.138.179.3 xmlrpc;
 46.138.188.134 xmlrpc;
 46.138.56.227 xmlrpc;
