--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1625,6 +1625,7 @@
 46.188.122.48 xmlrpc;
 46.191.177.237 xmlrpc;
 46.191.232.250 xmlrpc;
+46.191.233.7 xmlrpc;
 46.20.76.15 xmlrpc;
 46.22.51.155 xmlrpc;
 46.241.59.137 xmlrpc;
