--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1624,6 +1624,7 @@
 46.188.122.172 xmlrpc;
 46.188.122.48 xmlrpc;
 46.191.177.237 xmlrpc;
+46.191.185.168 xmlrpc;
 46.191.232.250 xmlrpc;
 46.191.233.7 xmlrpc;
 46.20.76.15 xmlrpc;
