Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1418,6 +1418,7 @@
 31.31.198.209 xmlrpc;
 31.31.198.45 xmlrpc;
 31.31.198.55 xmlrpc;
+31.40.154.242 xmlrpc;
 31.40.156.100 xmlrpc;
 31.41.62.75 xmlrpc;
 31.42.46.4 xmlrpc;
