--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1083,6 +1083,7 @@
 193.233.123.20 xmlrpc;
 193.233.58.57 xmlrpc;
 193.233.88.234 xmlrpc;
+193.24.199.50 xmlrpc;
 193.46.77.189 xmlrpc;
 193.93.193.200 xmlrpc;
 193.93.194.176 xmlrpc;
@@ -1773,6 +1774,7 @@
 5.165.50.251 xmlrpc;
 5.166.204.249 xmlrpc;
 5.166.72.32 xmlrpc;
+5.167.144.142 xmlrpc;
 5.167.144.234 xmlrpc;
 5.18.144.175 xmlrpc;
 5.18.152.72 xmlrpc;
