Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1456,6 +1456,7 @@
 37.18.38.128 xmlrpc;
 37.18.38.96 xmlrpc;
 37.188.16.215 xmlrpc;
+37.19.72.35 xmlrpc;
 37.19.76.30 xmlrpc;
 37.19.77.182 xmlrpc;
 37.193.54.208 xmlrpc;
@@ -1836,6 +1837,7 @@
 5.59.135.126 xmlrpc;
 5.59.222.41 xmlrpc;
 5.59.222.51 xmlrpc;
+5.59.246.29 xmlrpc;
 5.8.20.170 xmlrpc;
 5.8.21.34 xmlrpc;
 50.114.59.19 xmlrpc;
@@ -1946,6 +1948,7 @@
 80.234.66.125 xmlrpc;
 80.234.77.205 xmlrpc;
 80.234.78.97 xmlrpc;
+80.237.123.18 xmlrpc;
 80.237.123.63 xmlrpc;
 80.244.44.132 xmlrpc;
 80.244.44.140 xmlrpc;
