--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -894,6 +894,7 @@
 185.175.117.37 xmlrpc;
 185.181.246.244 xmlrpc;
 185.183.79.99 xmlrpc;
+185.188.96.207 xmlrpc;
 185.197.33.8 xmlrpc;
 185.200.117.131 xmlrpc;
 185.200.240.65 xmlrpc;
