Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -760,6 +760,7 @@
 178.46.107.97 xmlrpc;
 178.57.124.4 xmlrpc;
 178.66.28.65 xmlrpc;
+178.67.15.234 xmlrpc;
 178.67.192.28 xmlrpc;
 178.67.196.207 xmlrpc;
 178.67.249.130 xmlrpc;
@@ -2300,6 +2301,7 @@
 95.24.230.81 xmlrpc;
 95.24.233.234 xmlrpc;
 95.24.3.105 xmlrpc;
+95.24.38.108 xmlrpc;
 95.24.45.50 xmlrpc;
 95.24.46.89 xmlrpc;
 95.24.50.172 xmlrpc;
