Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1420,6 +1420,7 @@
 31.31.198.55 xmlrpc;
 31.40.154.242 xmlrpc;
 31.40.156.100 xmlrpc;
+31.41.58.150 xmlrpc;
 31.41.62.75 xmlrpc;
 31.42.46.4 xmlrpc;
 31.43.223.161 xmlrpc;
@@ -2341,6 +2342,7 @@
 95.54.207.203 xmlrpc;
 95.54.231.96 xmlrpc;
 95.55.58.181 xmlrpc;
+95.55.69.131 xmlrpc;
 95.66.194.78 xmlrpc;
 95.66.236.10 xmlrpc;
 95.68.174.190 xmlrpc;
