Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -729,6 +729,7 @@
 178.178.97.220 xmlrpc;
 178.184.55.159 xmlrpc;
 178.186.20.158 xmlrpc;
+178.187.0.94 xmlrpc;
 178.187.226.222 xmlrpc;
 178.20.29.52 xmlrpc;
 178.204.77.105 xmlrpc;
@@ -1803,6 +1804,7 @@
 5.188.62.26 xmlrpc;
 5.188.62.76 xmlrpc;
 5.2.36.169 xmlrpc;
+5.206.10.214 xmlrpc;
 5.227.203.6 xmlrpc;
 5.227.30.21 xmlrpc;
 5.227.7.68 xmlrpc;
