--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1874,6 +1874,7 @@
 61.155.196.34 xmlrpc;
 61.158.175.38 xmlrpc;
 61.160.215.149 xmlrpc;
+62.118.92.248 xmlrpc;
 62.122.102.13 xmlrpc;
 62.181.51.29 xmlrpc;
 62.217.184.192 xmlrpc;
