Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2221,6 +2221,7 @@
 94.140.246.3 xmlrpc;
 94.140.246.55 xmlrpc;
 94.141.125.234 xmlrpc;
+94.142.248.83 xmlrpc;
 94.158.190.83 xmlrpc;
 94.181.160.57 xmlrpc;
 94.181.82.100 xmlrpc;
