--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1384,6 +1384,7 @@
 31.135.248.73 xmlrpc;
 31.148.118.27 xmlrpc;
 31.148.139.165 xmlrpc;
+31.148.174.77 xmlrpc;
 31.148.35.9 xmlrpc;
 31.148.4.67 xmlrpc;
 31.171.198.139 xmlrpc;
