--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -63,6 +63,7 @@
 104.28.157.197 xmlrpc;
 104.28.157.200 xmlrpc;
 104.28.158.133 xmlrpc;
+104.28.211.43 xmlrpc;
 106.14.0.195 xmlrpc;
 106.14.30.24 xmlrpc;
 106.15.10.221 xmlrpc;
