--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1053,6 +1053,7 @@
 188.65.18.176 xmlrpc;
 188.65.18.213 xmlrpc;
 188.65.18.86 xmlrpc;
+188.68.194.27 xmlrpc;
 188.92.195.2 xmlrpc;
 192.109.243.217 xmlrpc;
 192.144.6.207 xmlrpc;
