--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1068,6 +1068,7 @@
 193.106.151.170 xmlrpc;
 193.106.69.12 xmlrpc;
 193.107.148.154 xmlrpc;
+193.110.136.51 xmlrpc;
 193.112.79.79 xmlrpc;
 193.143.1.7 xmlrpc;
 193.151.222.216 xmlrpc;
