Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1138,6 +1138,7 @@
 195.245.244.25 xmlrpc;
 195.245.244.54 xmlrpc;
 195.64.105.193 xmlrpc;
+195.64.105.228 xmlrpc;
 195.66.89.179 xmlrpc;
 195.68.240.12 xmlrpc;
 195.68.240.182 xmlrpc;
