Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -771,6 +771,7 @@
 178.67.192.28 xmlrpc;
 178.67.196.207 xmlrpc;
 178.67.249.130 xmlrpc;
+178.67.58.8 xmlrpc;
 178.68.51.136 xmlrpc;
 178.70.169.42 xmlrpc;
 178.71.94.219 xmlrpc;
