--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2245,6 +2245,7 @@
 94.25.189.239 xmlrpc;
 94.253.109.227 xmlrpc;
 94.253.110.1 xmlrpc;
+94.253.41.205 xmlrpc;
 94.28.139.172 xmlrpc;
 94.28.198.76 xmlrpc;
 94.29.10.69 xmlrpc;
