Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -419,6 +419,7 @@
 139.162.39.171 xmlrpc;
 139.162.41.117 xmlrpc;
 139.162.51.17 xmlrpc;
+139.162.60.22 xmlrpc;
 139.177.187.216 xmlrpc;
 139.180.139.27 xmlrpc;
 139.180.221.17 xmlrpc;
@@ -2369,5 +2370,6 @@
 95.79.83.142 xmlrpc;
 95.81.216.126 xmlrpc;
 95.83.135.146 xmlrpc;
+95.83.22.221 xmlrpc;
 95.83.39.173 xmlrpc;
 95.84.247.24 xmlrpc;
