--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1826,6 +1826,7 @@
 5.253.102.177 xmlrpc;
 5.253.103.128 xmlrpc;
 5.254.176.200 xmlrpc;
+5.255.231.109 xmlrpc;
 5.255.231.122 xmlrpc;
 5.255.231.142 xmlrpc;
 5.255.231.145 xmlrpc;
