--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1646,6 +1646,7 @@
 46.191.233.7 xmlrpc;
 46.20.76.15 xmlrpc;
 46.22.51.155 xmlrpc;
+46.23.98.64 xmlrpc;
 46.241.59.137 xmlrpc;
 46.241.60.38 xmlrpc;
 46.242.11.201 xmlrpc;
