--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -918,6 +918,7 @@
 185.244.23.40 xmlrpc;
 185.244.5.248 xmlrpc;
 185.246.194.111 xmlrpc;
+185.246.65.151 xmlrpc;
 185.248.27.123 xmlrpc;
 185.250.149.64 xmlrpc;
 185.252.221.52 xmlrpc;
