Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -694,6 +694,7 @@
 176.99.235.7 xmlrpc;
 176.99.84.175 xmlrpc;
 176.99.86.125 xmlrpc;
+176.99.9.19 xmlrpc;
 178.128.127.179 xmlrpc;
 178.128.31.8 xmlrpc;
 178.128.58.106 xmlrpc;
@@ -1351,6 +1352,7 @@
 240e:d9:c200:141:776b::cc0 xmlrpc;
 27.128.246.110 xmlrpc;
 2a00:1838:37:1c6::38ed xmlrpc;
+2a00:f940:2:1:2:0:1:496d xmlrpc;
 2a00:f940:2:1:2::1453 xmlrpc;
 2a02:4780:3:694:0:1960:fb4d:1 xmlrpc;
 2a03:6f00:1::5c35:6067 xmlrpc;
@@ -1928,7 +1930,6 @@
 79.173.69.143 xmlrpc;
 79.173.87.105 xmlrpc;
 79.174.33.250 xmlrpc;
-79.174.35.42 xmlrpc;
 8.130.132.51 xmlrpc;
 8.130.22.204 xmlrpc;
 8.130.85.125 xmlrpc;
@@ -2365,7 +2366,6 @@
 95.73.236.13 xmlrpc;
 95.79.83.142 xmlrpc;
 95.81.216.126 xmlrpc;
-95.83.135.146 xmlrpc;
 95.83.22.221 xmlrpc;
 95.83.39.173 xmlrpc;
 95.84.247.24 xmlrpc;
